# jpeg-info

./: CMakeLists.txt  README.md
src/: file_reader.cpp  file_reader.h  format.cpp  format.h  i18n.cpp  i18n.h  jpeg_indexer.cpp  jpeg_indexer.h  jpeg_markers.h  jpeg_types.h  main.cpp  parse_adobe.cpp  parse_adobe.h  parse_com.cpp  parse_com.h  parse_exif.cpp  parse_exif.h  parse_icc.cpp  parse_icc.h  parse_jfif.cpp  parse_jfif.h  parse_sof.cpp  parse_sof.h  parse_xmp.cpp  parse_xmp.h
